Metalama.Framework/src/tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/MissingType.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error LAMA0236 on `t`: `Cannot reference 'lambda expression/t' in 'C.M(IAspectBuilder<Foo>)' because 'lambda expression/t' is run-time-only but 'C.M(IAspectBuilder<Foo>)' is compile-time.`